// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders loading and then the node: api call 1`] = `
Array [
  Array [
    "/djedi/load_many",
    Object {
      "body": "{}",
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders loading and then the node: loading 1`] = `"Loading…"`;

exports[`it renders loading and then the node: window.DJEDI_NODES 1`] = `
Object {
  "i18n://en-us@test.txt": undefined,
}
`;

exports[`it renders loading and then the node: with value 1`] = `
<span
  data-i18n="en-us@test"
>
  returned text
</span>
`;

exports[`it renders synchronously if the node is already in cache: api call 1`] = `
Array [
  Array [
    "/djedi/load_by_prefix",
    Object {
      "body": "[\\"home/\\"]",
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`it renders synchronously if the node is already in cache: loadByPrefix result 1`] = `
Object {
  "i18n://en-us@home/intro.txt": "Welcome to our amazing website!",
}
`;

exports[`it renders synchronously if the node is already in cache: with value 1`] = `
<span
  data-i18n="en-us@home/intro"
>
  Welcome to our amazing website!
</span>
`;
